[package]
name = "game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy-inspector-egui = "0.4.1"
bevy_tilemap = "0.4.0"
framework = { path="../framework" }
logic = { path="../logic" }
rand = "0.8.3"